// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownList: should render as lower level child 1`] = `
<div
  className="root"
>
  <div
    className="toggler"
    onClick={[Function]}
  >
    <Text
      baseline={false}
      raw={true}
      shouting={true}
    >
      testValue
    </Text>
    <div
      className="chevronBox"
    >
      <Icon
        animation=""
        lineHeight=""
        rotation="-180deg"
        size=""
        smoothRotate={true}
        type="chevron"
      />
    </div>
  </div>
  <div
    className="dropdown"
  >
    <DropdownList
      chevronAlignment="top"
      compact={false}
      iconPosition="right"
      lowerLevel={true}
      noShadow={false}
      value="testValue"
    >
      <span />
    </DropdownList>
  </div>
</div>
`;

exports[`DropdownList: should render in compact mode 1`] = `
<div
  className="root"
>
  <div
    className="toggler"
    onClick={[Function]}
  >
    <Text
      baseline={false}
      raw={true}
      shouting={false}
    >
      testValue
    </Text>
    <div
      className="chevronBox"
    >
      <Icon
        animation=""
        lineHeight=""
        rotation="-180deg"
        size=""
        smoothRotate={true}
        type="chevron"
      />
    </div>
  </div>
  <div
    className="dropdown"
  >
    <span />
  </div>
</div>
`;

exports[`DropdownList: should render value with children 1`] = `
<div
  className="root"
>
  <div
    className="toggler"
    onClick={[Function]}
  >
    <Text
      baseline={false}
      raw={true}
      shouting={true}
    >
      testValue
    </Text>
    <div
      className="chevronBox"
    >
      <Icon
        animation=""
        lineHeight=""
        rotation="-180deg"
        size=""
        smoothRotate={true}
        type="chevron"
      />
    </div>
  </div>
  <div
    className="dropdown"
  >
    <span />
  </div>
</div>
`;

exports[`DropdownList: should render with center-aligned chevron 1`] = `
<div
  className="root"
>
  <div
    className="toggler"
    onClick={[Function]}
  >
    <Text
      baseline={false}
      raw={true}
      shouting={true}
    >
      testValue
    </Text>
    <div
      className="chevronBox"
    >
      <Icon
        animation=""
        lineHeight=""
        rotation="-180deg"
        size=""
        smoothRotate={true}
        type="chevron"
      />
    </div>
  </div>
  <div
    className="dropdown"
  >
    <span />
  </div>
</div>
`;

exports[`DropdownList: should render with className 1`] = `
<div
  className="root foo"
>
  <div
    className="toggler"
    onClick={[Function]}
  >
    <Text
      baseline={false}
      raw={true}
      shouting={true}
    >
      testValue
    </Text>
    <div
      className="chevronBox"
    >
      <Icon
        animation=""
        lineHeight=""
        rotation="-180deg"
        size=""
        smoothRotate={true}
        type="chevron"
      />
    </div>
  </div>
  <div
    className="dropdown"
  >
    <span />
  </div>
</div>
`;

exports[`DropdownList: should render without shadow 1`] = `
<div
  className="root noShadow"
>
  <div
    className="toggler"
    onClick={[Function]}
  >
    <Text
      baseline={false}
      raw={true}
      shouting={true}
    >
      testValue
    </Text>
    <div
      className="chevronBox"
    >
      <Icon
        animation=""
        lineHeight=""
        rotation="-180deg"
        size=""
        smoothRotate={true}
        type="chevron"
      />
    </div>
  </div>
  <div
    className="dropdown"
  >
    <span />
  </div>
</div>
`;
